Fix SDK build for OpenJDK11